# sudokugen

./: CMakeLists.txt  README.md  field_subset.c  field_subset.h  generator.c  generator.h  heuristics.c  heuristics.h  main.c  sudoku.c  sudoku.h  tests.h  utils.h
